--- a/tptp/src/main/resources/templates/app/about.html
+++ b/tptp/src/main/resources/templates/app/about.html
@@ -5,88 +5,6 @@
 	  layout:decorate="~{layout/defaultLayout}">
 	  
 <th:block layout:fragment="customContents">
-
-
-	<!-- ======= Testimonials Section ======= -->
-	  <section id="testimonials" class="testimonials"` href="#services">
-	    <div class="container position-relative">
-	
-	      <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
-	        <div class="swiper-wrapper">
-	
-	          <div class="swiper-slide">
-	            <div class="testimonial-item">
-	              <img th:src="@{/assets/img/testimonials/testimonials-1.jpg}" class="testimonial-img" alt="">
-	              <h3>Saul Goodman</h3>
-	              <h4>Ceo &amp; Founder</h4>
-	              <p>
-	                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-	                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-	                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-	              </p>
-	            </div>
-	          </div><!-- End testimonial item -->
-	
-	          <div class="swiper-slide">
-	            <div class="testimonial-item">
-	              <img th:src="@{/assets/img/testimonials/testimonials-2.jpg}" class="testimonial-img" alt="">
-	              <h3>Sara Wilsson</h3>
-	              <h4>Designer</h4>
-	              <p>
-	                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-	                Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-	                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-	              </p>
-	            </div>
-	          </div><!-- End testimonial item -->
-	
-	          <div class="swiper-slide">
-	            <div class="testimonial-item">
-	              <img th:src="@{/assets/img/testimonials/testimonials-3.jpg}" class="testimonial-img" alt="">
-	              <h3>Jena Karlis</h3>
-	              <h4>Store Owner</h4>
-	              <p>
-	                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-	                Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-	                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-	              </p>
-	            </div>
-	          </div><!-- End testimonial item -->
-	
-	          <div class="swiper-slide">
-	            <div class="testimonial-item">
-	              <img th:src="@{/assets/img/testimonials/testimonials-4.jpg}" class="testimonial-img" alt="">
-	              <h3>Matt Brandon</h3>
-	              <h4>Freelancer</h4>
-	              <p>
-	                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-	                Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-	                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-	              </p>
-	            </div>
-	          </div><!-- End testimonial item -->
-			<!-- End testimonial item -->
-	
-
-
-<style>
- .character {
-	  width:100%;
-	  height: 100%;
-	}
-</style>
-
-	<main id="main">
-	    <!-- ======= Breadcrumbs ======= -->
-	    <section class="breadcrumbs">
-	      <div class="container">
-	        <div class="d-flex justify-content-between align-items-center">
-	          <h2>ABOUT US</h2>
-	          <ol>
-	            <li><a th:href="@{/}">HOME</a></li>
-	            <li>ABOUT US</li>
-	          </ol>
-
 <main id="main">
     <!-- ======= Breadcrumbs ======= -->
     <section class="breadcrumbs">
@@ -95,6 +13,9 @@
           <h2>ABOUT US</h2>
           <ol>
             <li><a th:href="@{/}">HOME</a></li>
+            <li>MAP</li>
+            <li>REVIEW</li>
+            <li>ABOUT US</li>
           </ol>
         </div>
       </div>
@@ -105,39 +26,37 @@
 			<div class="section-title">
 	       	<span>ABOUT US</span>
 	       	<h2>ABOUT US</h2>
-	       	</br>
-	       	<p id="ab-title">🔎 <i><B>tptp</B></i>는 this place, that place의 약자로 국내 <i><B>35,402</B></i>개의 관광지를 소개하는 홈페이지입니다.</p>
-
+	       	<p>tptp는 this place, that place의 약자로 국내 35,402개의 관광지를 소개하는 홈페이지입니다.</p>
 	        </div>
 	        <div class="row">
 	          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
 	            <div class="icon-box">
 	              <div class="icon" ><img class="character" th:src="@{/assets/img/about/kms.png}" alt="김민선"></div>
 	              <h4 class="title"><a href="">김민선</a></h4>
-	              <p class="description">👤 홈페이지 제작</p>
-	              <p class="description">🗣️ Java, Javascript, SQL</p>
+	              <p class="description">주요역할: 홈페이지 제작</p>
+	              <p class="description">언어: Java, Javascript, SQL</p>
 	              <p class="description">📧 minseonnn@naver.com</p>
-	              <p class="description">🔗 github.com/minseonn</p>
+	              <p class="description">github: https://github.com/minseonn</p>
 	            </div>
 	          </div>
 	          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
 	            <div class="icon-box">
 	              <div class="icon"><img class="character" th:src="@{/assets/img/about/kyj.png}" alt="김예진"></div>
 	              <h4 class="title"><a href="">김예진</a></h4>
-	              <p class="description">👤 홈페이지 제작</p>
-	              <p class="description">🗣️ Java, Javascript, SQL</p>
+	              <p class="description">주요역할: 홈페이지 제작</p>
+	              <p class="description">언어: Java, Javascript, SQL</p>
 	              <p class="description">📧 ki5818@gmail.com</p>
-	              <p class="description">🔗 github.com/ki5818</p>
+	              <p class="description">github: https://github.com/ki5818</p>
 	            </div>
 	          </div>
 	          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
 	            <div class="icon-box">
 	              <div class="icon"><img class="character" th:src="@{/assets/img/about/pmj.png}" alt="박민정"></div>
 	              <h4 class="title"><a href="">박민정</a></h4>
-	              <p class="description">👤 맵 적용 알고리즘 작성</p>
-	              <p class="description">🗣️ Java, Javascript, Python, SQL</p>
+	              <p class="description">주요역할: 지도 클러스터링 알고리즘 작성</p>
+	              <p class="description">언어: Java, Javascript, Python, SQL</p>
 	              <p class="description">📧 minwjd1028@g.skku.edu</p>
-	              <p class="description">🔗 github.com/Park-Min-Jeong</p>
+	              <p class="description">github: https://github.com/Park-Min-Jeong</p>
 	            </div>
 	          </div>
 	
@@ -145,10 +64,10 @@
 	            <div class="icon-box">
 	              <div class="icon"><img class="character" th:src="@{/assets/img/about/whr.png}" alt="우하림"></div>
 	              <h4 class="title"><a href="">우하림</a></h4>
-	              <p class="description">👤 데이터 시각화</p>
-	              <p class="description">🗣️ Python, Javascript, SQL</p>
+	              <p class="description">주요역할: 데이터 시각화</p>
+	              <p class="description">언어: Python, Javascript, SQL</p>
 	              <p class="description">📧 hannah.woo.2022@gmail.com</p>
-	              <p class="description">🔗 github.com/Hannah-0111</p>
+	              <p class="description">github: https://github.com/Hannah-0111</p>
 	            </div>
 	          </div>
 	        </div>
