--- a/tptp/src/main/resources/templates/app/map.html
+++ b/tptp/src/main/resources/templates/app/map.html
@@ -29,7 +29,7 @@
 		          <p>가고 싶은 관광지를 클릭하면 반경 nkm 이내의 관광지가 모두 표시됩니다!</p>
 		        </div>
 		        <div class="container icon-box" style="display: inline-grid; grid-template-columns: repeat(4, 1fr); border: 1px solid #ffb727; margin-bottom:20px;">
-		              <div class="item check"><label id="label"><input type="checkbox" id="CT1" name="checkbox" checked="checked">자연경관</label></div>
+		              <div class="item check"><label id="label"><input type="checkbox" id="CT1" name="checkbox">자연경관</label></div>
 		              <div class="item check"><label id="label"><input type="checkbox" id="CT2" name="checkbox">문화재</label></div>
 		              <div class="item check"><label id="label"><input type="checkbox" id="CT3" name="checkbox">테마공원</label></div>
 		              <div class="item check"><label id="label"><input type="checkbox" id="CT4" name="checkbox">관광지</label></div>
@@ -44,7 +44,8 @@
 		        			<li></li>
 		        			<li></li>
 		        		</ul>
-		        		<div id="pagination"></div>
+		        		<div id="pagination">
+		        		</div>
 				    </div>
 				</div>
 			</div>
@@ -66,7 +67,17 @@
 			var markers;
 			getGeoApi();
 			
-			var page = 1;
+			let total;
+			let currentNum;
+			let count = 0;
+			var checkedList = [];
+			let pageCount = 1;
+			
+			const POSTS_PER_PAGE = [[${POSTS_PER_PAGE}]];
+			const PAGE_PER_BLOCK = [[${PAGE_PER_BLOCK}]];
+			
+			console.log(`한 페이지당 보여줄 수는 : ${POSTS_PER_PAGE}`);
+			console.log(`한 페이지당 보여줄 블락 수는 : ${PAGE_PER_BLOCK}`);
 
 			// geolocation api 속도 때문에 1초 기다리고 map 생성
 			setTimeout(() =>  displayMap(), 1000);
@@ -100,9 +111,9 @@
 				// 지도를 생성합니다    
 				map = new kakao.maps.Map(mapContainer, mapOption);
 				
+				// 생성된 마커를 지웁니다.
 				markers = [];
-				
-				
+								
 				// 마우스 휠로 줌 여부
 				map.setZoomable(false);
 				
@@ -132,18 +143,20 @@
 				var zoomControl = new kakao.maps.ZoomControl();
 				map.addControl(zoomControl, kakao.maps.ControlPosition.RIGHT);
 				
-				checkbox(page);
+				checkbox();
 				
 			
 			}
-				function checkbox(page) {
+				function checkbox() {
 					/** 체크박스 이벤트 처리 */
 				    var checkboxes = document.querySelectorAll('input[type=checkbox]');
 				    for (var checkbox of checkboxes) {
 				        checkbox.addEventListener('change', function(event) {
 				        	checkbox = document.getElementsByName("checkbox");
 							//체크박스중 체크된 체크박스를 알기 위한 객체
-							var checkedList = [];
+							checkedList = [];
+							currentNum = 1;
+							pageCount = 1;
 				        	
 							checkbox.forEach((element) => {
 			        		  if (element.checked == true) {
@@ -161,21 +174,17 @@
 							}
 							// ajax를 이용하여 checkBox event를 처리합니다.
 						    var request = $.ajax({
-						           url: "/mapcheck",
+						           url: "/mapCheck",
 						           type: "GET",
 						           dataType: 'json',
-						           data: {checkedList, page}
+						           data: {checkedList, currentNum}
 							});
 							//성공
 							request.done(function(viewList){
 								console.log("success");
 								console.log(viewList);
-								//pageinfo 
-								var pageinfo = viewList[0].pageInfo;
-								console.log(pageinfo);
-								console.log(`check page : ${page}`);
-								displayPagination(viewList, pageinfo, page);
-				   	 			displayPlaces(viewList, pageinfo, page);
+								displayPagination(viewList);
+				   	 			total = viewList.length;
 								
 							});
 							//실패
@@ -185,8 +194,8 @@
 				        })
 				    }
 				}
-			 // 검색 결과 목록과 마커를 표출하는 함수입니다
-			    function displayPlaces(viewList, pageinfo, page) {
+			    // 검색 결과 목록과 마커를 표출하는 함수입니다
+			    function displayPlaces(viewList) {
 			        var listEl = document.getElementById('placesList'), 
 			        menuEl = document.getElementById('menu_wrap'),
 			        fragment = document.createDocumentFragment(), 
@@ -199,22 +208,17 @@
 			        // 지도에 표시되고 있는 마커를 제거합니다
 			        removeMarker();
 			        
-			        for (var j = 0; j < pageinfo.postsPerPage; j++ ) {
-			        	var i = j + ( (page - 1) * pageinfo.postsPerPage );
-			        	
+			        for (var i = 0; i < POSTS_PER_PAGE; i++ ) {
 			        	// 데이터가 비어있는 경우에는 처리하지 않고 넘어갑니다
 			            if (!viewList[i]) {
 			              continue;
 			            }
-			        	
-			        	console.log(viewList[i]);
-			        	var lat = viewList[i]['lat'],
-			        		lng = viewList[i]['lng'];
-			        	
+			        	var index = i + (POSTS_PER_PAGE * (currentNum - 1) + 1);
+
 			            // 마커를 생성하고 지도에 표시합니다
-			            var placePosition = new kakao.maps.LatLng(lat, lng),
+			            var placePosition = new kakao.maps.LatLng(viewList[i].lat, viewList[i].lng),
 			                marker = addMarker(placePosition, i, viewList[i].categoryId, viewList[i].place), 
-			                itemEl = getListItem(i, viewList[i]); // 검색 결과 항목 Element를 생성합니다
+			                itemEl = getListItem(index, viewList[i]); // 검색 결과 항목 Element를 생성합니다
 
 			            // 검색된 장소 위치를 기준으로 지도 범위를 재설정하기위해
 			            // LatLngBounds 객체에 좌표를 추가합니다
@@ -223,6 +227,7 @@
 			            // 마커와 검색결과 항목에 mouseover 했을때
 			            // 해당 장소에 인포윈도우에 장소명을 표시합니다
 			            // mouseout 했을 때는 인포윈도우를 닫습니다
+			            
 			            (function(marker, title) {
 			                kakao.maps.event.addListener(marker, 'mouseover', function() {
 			                    displayInfowindow(marker, title);
@@ -252,44 +257,150 @@
 			        //map.setBounds(bounds);
 			    }
 			 
-			 // 검색결과 목록 하단에 페이지번호를 표시는 함수입니다
-			    function displayPagination(viewList, pageinfo, page) {
+			 // 검색결과 목록 하단에 페이지번호를 생성하는 함수입니다
+			    function displayPagination(viewList) {
 			        var paginationEl = document.getElementById('pagination'),
-			            fragment = document.createDocumentFragment(),
-			            i; 
-
+			            fragment = document.createDocumentFragment();
+			        
 			        // 기존에 추가된 페이지번호를 삭제합니다
 			        while (paginationEl.hasChildNodes()) {
 			            paginationEl.removeChild (paginationEl.lastChild);
 			        }
-			        var el = document.createElement('a');
-			        el.innerHTML = "이전";
-			        el.href = "#";
-			        fragment.appendChild(el);
-			        paginationEl.appendChild(fragment);
 			        
-			        for (i=1; i<=11; i++) {
-			            var el = document.createElement('a');
+			        // 이전 버튼 생성
+			        var prev = document.createElement('a');
+			        prev.innerHTML = "이전";
+			        prev.href = "#";
+			        prev.id = "prev";
+			        prev.onclick='preventClick(event)'
+			        fragment.appendChild(prev);
+			        paginationEl.appendChild(fragment);
+			        console.log(currentNum);
+			        
+			        if(pageCount == 1) {
+			        	 prev.removeAttribute('href');
+			        }
+			        
+			        prev.addEventListener('click', function(event) { // 이전 버튼 클릭시
+				        
+			        	if(pageCount == 1) {
+				        	 return;
+				        }
+			        
+				        currentNum = pageCount - 10;
+				        pageCount = currentNum;
+
+				        console.log(pageCount, currentNum)
+			        	var request = $.ajax({
+					           url: "/mapCheck",
+					           type: "GET",
+					           dataType: 'json',
+					           data: {checkedList, currentNum}
+						});
+						//성공
+						request.done(function(viewList){
+							console.log("success");
+							console.log(viewList);
+							displayPagination(viewList);
+							
+						});
+						//실패
+						request.fail(function(jqXHR, textStatus, viewList){
+							console.log('Request failed: ' + textStatus);
+						});
+			        });
+
+			        // 숫자 생성
+			        for (i = pageCount; i <= PAGE_PER_BLOCK + pageCount-1;  i++) {
+			        	console.log(i, currentNum);
+			            var el = document.createElement('a'); // 새로운 요소 생성
 			            el.innerHTML = i;
 			            el.href = "#";
-			            console.log("aging");
-			            console.log(viewList);
-			            
-		                el.addEventListener('click', function(){
-				        	page = this.innerText;
-				        	console.log(`page: ${page}`);
-				        	displayPlaces(viewList, pageinfo, page);
-		                });
-
+			            el.id = i;
 			            fragment.appendChild(el);
+			            paginationEl.appendChild(fragment);
+			            
+						if(currentNum == el.innerText) {
+							el.style.cssText = 'font-weight:bold;';
+							el.removeAttribute('href');
+						}
+			            
+			            if (PAGE_PER_BLOCK == (total / POSTS_PER_PAGE)) { // 페이징 블럭수 조정
+			                return false;
+			            }
+
+			            // 클릭 이벤트 리스너 등록
+			            el.addEventListener('click', function() {
+			                currentNum = this.innerText;
+			                console.log(`currentNum: ${currentNum}`);
+			                console.log(this);
+			                console.log(paginationEl.childNodes);
+			                
+			                paginationEl.childNodes.forEach(function(currentValue, currentIndex){
+			                	currentValue.style.cssText = 'color: black;'
+			                	currentValue.href = "#";
+			                })
+
+							this.style.cssText = 'font-weight:bold;';	
+							this.removeAttribute('href');
+							
+						    var request = $.ajax({
+						           url: "/mapCheck",
+						           type: "GET",
+						           dataType: 'json',
+						           data: {checkedList, currentNum}
+							});
+							//성공
+							request.done(function(viewList){
+								console.log("success");
+								console.log(viewList);
+								displayPlaces(viewList);
+								
+							});
+							//실패
+							request.fail(function(jqXHR, textStatus, viewList){
+									console.log('Request failed: ' + textStatus);
+							});
+
+			            });
+		                
 			        }
+
+			        // 다음 버튼 생성
+			        var next = document.createElement('a'); // 새로운 요소 생성
+			        next.innerHTML = "다음";
+			        next.href = "#";
+			        next.id = "next";
+			        fragment.appendChild(next);
 			        paginationEl.appendChild(fragment);
 			        
-			        el.innerHTML = "다음";
-			        fragment.appendChild(el);
-			        paginationEl.appendChild(fragment);
+			        next.addEventListener('click', function() {
+				        currentNum = pageCount + 10;
+				        pageCount = currentNum;
+				        console.log(pageCount, currentNum);
+			        	var request = $.ajax({
+					           url: "/mapCheck",
+					           type: "GET",
+					           dataType: 'json',
+					           data: {checkedList, currentNum}
+						});
+						//성공
+						request.done(function(viewList){
+							console.log("success");
+							console.log(viewList);
+							displayPagination(viewList);
+							
+						});
+						//실패
+						request.fail(function(jqXHR, textStatus, viewList){
+							console.log('Request failed: ' + textStatus);
+						});
+			        });
+			        displayPlaces(viewList);
 			    }
-				 
+			 
+			 
+
 				// 항목을 Element로 반환하는 함수입니다
 				function getListItem(index, viewList) {
 				    var el = document.createElement('li');
@@ -298,22 +409,22 @@
 				    if(viewList.categoryId == "CT1") {
 				    	itemStr = '<span class="markerbg marker_nal"></span>' +
 		                '<div class="info">' +
-		                '   <h5>' + (index + 1) + '. ' + viewList["place"] + '</h5>';
+		                '   <h5>' + index + '. ' + viewList["place"] + '</h5>';
 					}
 					else if(viewList.categoryId == "CT2") {
 						itemStr = '<span class="markerbg marker_cul"></span>' +
 		                '<div class="info">' +
-		                '   <h5>' + (index + 1) + '. ' + viewList["place"] + '</h5>';
+		                '   <h5>' + index + '. ' + viewList["place"] + '</h5>';
 					}
 					else if(viewList.categoryId == "CT3") {
 						itemStr = '<span class="markerbg marker_them"></span>' +
 		                '<div class="info">' +
-		                '   <h5>' + (index + 1) + '. ' + viewList["place"] + '</h5>';
+		                '   <h5>' + index + '. ' + viewList["place"] + '</h5>';
 					}
 					else {
 						itemStr = '<span class="markerbg marker_tour"></span>' +
 		                '<div class="info">' +
-		                '   <h5>' + (index + 1) + '. ' + viewList["place"] + '</h5>';
+		                '   <h5>' + index + '. ' + viewList["place"] + '</h5>';
 					}
 				    
 	                itemStr += '    <p>' + viewList.address + '</p>';         
