23-07-14 다시 review. html 수정

--- a/tptp/src/main/resources/templates/app/review.html
+++ b/tptp/src/main/resources/templates/app/review.html
@@ -98,7 +98,7 @@
                                		-->
                             	</li>                    
                             	<li class="view_date">
-                                	<span class=""> | 작성일 : </span>
+                                	<span class=""> 작성일 : </span>
                                 	<span th:text="${reviewList[0].writeDate}"></span>    
                             	</li>
 							</ul>
