--- a/tptp/src/main/resources/templates/app/review.html
+++ b/tptp/src/main/resources/templates/app/review.html
@@ -90,35 +90,24 @@
             <form action="" method="get" enctype="multipart/form-data">
                 <ul class="area_card_item" th:each="r : ${reviewList}">
                     <li class="" th:text = "${r.contents}"></li>  
-					<li class="view_place">
-						<span>장소 : </span>
-                        <span th:text="${reviewList[0].placeId}"></span>
-                               		<!--
-                               		<p th:text="${reviewList[0].placeId}"></p>
-                               		-->
-                            	</li>                    
-                            	<li class="view_date">
-                                	<span class=""> 작성일 : </span>
-                                	<span th:text="${reviewList[0].writeDate}"></span>    
-                            	</li>
-							</ul>
+					<div class="place_date">
+						<li class="view_place">
+							<span>장소 : </span>
+								<th:block th:object="${r.tptp}">
+                        		<span th:text="*{place}"></span>
+					      	</th:block>
+                    	</li> 
+						<li class="view_date">
+                        	<span class=""> 작성일 : </span>
+                        	<span th:text="${reviewList[0].writeDate}"></span>    
+                    	</li>
+					</div>
+					                   
+                   	
+				</ul>
                         </ul>
                     </li> 
                 </ul>
-                
-                <div class="card my-3">
-        			<div class="card-body">
-            			<div class="card-text">
-							<p th:text="${reviewList[3].contents}"></p>
-						</div>
-            				<div class="d-flex justify-content-end">
-                				<div class="badge bg-light text-dark p-2">
-									<p th:text="${reviewList[3].placeId}"></p>
-                    				<p th:text="${reviewList[3].writeDate}"></p>
-                				</div>
-            				</div>
-        				</div>
-    				</div>
     				
     			<div class="review_write">
 					<p onclick="openPopup()">리뷰작성하기</p>
