--- a/tptp/src/main/resources/templates/fragments/customJs.html
+++ b/tptp/src/main/resources/templates/fragments/customJs.html
@@ -6,26 +6,34 @@
 	<script th:src="@{/assets/js/main.js}"></script>
 	
 	<!-- Custom JS File -->
-	<script>	
-		<!-- nav 색깔 -->
-		const classNameInit = "nav-link scrollto";
+	<script>
+		var classNameInit = "nav-link scrollto";
 		let nav = document.getElementsByClassName(classNameInit);
 		let html = window.location.href;
 		html = html.split('/')[3];
-		if(html == "aboutUs") {
+		if(html == "map") {
+			nav[1].className += ' active';
+			nav[0].className = classNameInit;
+			nav[2].className = classNameInit;
+			nav[3].className = classNameInit;
+		}
+		else if (html == "review") {
 			nav[2].className += ' active';
 			nav[0].className = classNameInit;
 			nav[1].className = classNameInit;
+			nav[2].className = classNameInit;
 		}
-		else if (html == "map") {
-			nav[1].className += ' active';
+		else if (html == "aboutUs") {
+			nav[3].className += ' active';
 			nav[0].className = classNameInit;
+			nav[1].className = classNameInit;
 			nav[2].className = classNameInit;
 		}
 		else {
 			nav[0].className += ' active';
 			nav[1].className = classNameInit;
 			nav[2].className = classNameInit;
+			nav[3].className = classNameInit;
 		}
 	</script>
 	
