--- a/tptp/src/main/resources/templates/app/about.html
+++ b/tptp/src/main/resources/templates/app/about.html
@@ -13,8 +13,6 @@
           <h2>ABOUT US</h2>
           <ol>
             <li><a th:href="@{/}">HOME</a></li>
-            <li>MAP</li>
-            <li>REVIEW</li>
             <li>ABOUT US</li>
           </ol>
         </div>
@@ -26,48 +24,48 @@
 			<div class="section-title">
 	       	<span>ABOUT US</span>
 	       	<h2>ABOUT US</h2>
-	       	<p>tptp는 this place, that place의 약자로 국내 35,402개의 관광지를 소개하는 홈페이지입니다.</p>
+	       	<p><strong>tptp는 this place, that place의 약자로 국내 35,402개의 관광지를 소개하는 홈페이지입니다.</strong></p>
 	        </div>
 	        <div class="row">
 	          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
 	            <div class="icon-box">
 	              <div class="icon" ><img class="character" th:src="@{/assets/img/about/kms.png}" alt="김민선"></div>
-	              <h4 class="title"><a href="">김민선</a></h4>
+	              <h4 class="title"><a href="https://github.com/minseonn">김민선</a></h4>
 	              <p class="description">주요역할: 홈페이지 제작</p>
 	              <p class="description">언어: Java, Javascript, SQL</p>
 	              <p class="description">📧 minseonnn@naver.com</p>
-	              <p class="description">github: https://github.com/minseonn</p>
+	              <p class="description"><i class="bi bi-github"></i>    github: https://github.com/minseonn</p>
 	            </div>
 	          </div>
 	          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
 	            <div class="icon-box">
 	              <div class="icon"><img class="character" th:src="@{/assets/img/about/kyj.png}" alt="김예진"></div>
-	              <h4 class="title"><a href="">김예진</a></h4>
+	              <h4 class="title"><a href="https://github.com/ki5818">김예진</a></h4>
 	              <p class="description">주요역할: 홈페이지 제작</p>
 	              <p class="description">언어: Java, Javascript, SQL</p>
-	              <p class="description">📧 ki5818@gmail.com</p>
-	              <p class="description">github: https://github.com/ki5818</p>
+	              <p class="description">📧 ki5818@hanmail.net</p>
+	              <p class="description"><i class="bi bi-github"></i>    github: https://github.com/ki5818</p>
 	            </div>
 	          </div>
 	          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
 	            <div class="icon-box">
 	              <div class="icon"><img class="character" th:src="@{/assets/img/about/pmj.png}" alt="박민정"></div>
-	              <h4 class="title"><a href="">박민정</a></h4>
-	              <p class="description">주요역할: 지도 클러스터링 알고리즘 작성</p>
-	              <p class="description">언어: Java, Javascript, Python, SQL</p>
+	              <h4 class="title"><a href="https://github.com/Park-Min-Jeong">박민정</a></h4>
+	              <p class="description">주요역할: 지도 클러스터링 알고리즘</p>
+	              <p class="descriptio">언어: Java, Javascript, Python, SQL</p>
 	              <p class="description">📧 minwjd1028@g.skku.edu</p>
-	              <p class="description">github: https://github.com/Park-Min-Jeong</p>
+	              <p class="description"><i class="bi bi-github"></i>    github:      https://github.com/Park-Min-Jeong</p>
 	            </div>
 	          </div>
 	
 	          <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
 	            <div class="icon-box">
 	              <div class="icon"><img class="character" th:src="@{/assets/img/about/whr.png}" alt="우하림"></div>
-	              <h4 class="title"><a href="">우하림</a></h4>
+	              <h4 class="title"><a href="https://github.com/Hannah-0111">우하림</a></h4>
 	              <p class="description">주요역할: 데이터 시각화</p>
 	              <p class="description">언어: Python, Javascript, SQL</p>
 	              <p class="description">📧 hannah.woo.2022@gmail.com</p>
-	              <p class="description">github: https://github.com/Hannah-0111</p>
+	              <p class="description"><i class="bi bi-github"></i>    github: https://github.com/Hannah-0111</p>
 	            </div>
 	          </div>
 	        </div>
