--- a/tptp/src/main/resources/templates/app/reviewWrite.html
+++ b/tptp/src/main/resources/templates/app/reviewWrite.html
@@ -87,44 +87,32 @@
             <div class="section-title">
 		    	<span>BOARD</span>
 		        <h2>BOARD</h2>
-		        <p>여러분들이 등록한 모든 리뷰를 보여드립니다!</p>
+		        <p>여러분들이 다녀온 장소에 대한 리뷰를 남겨주세요!</p>
 		   	</div>
+		   	<div>
+				<form id="frm" name="frm" method="post" action="/review/write" enctype="multipart/form-data">
+				   <table class="review_detail">
+					   <tr>
+					   		<td colspan="2">
+                           		<textarea id="contents" class="write_content" name="contents" placeholder="리뷰를 입력해주세요" maxlength="100"></textarea>
+                       		</td>
+                   		</tr>
+                   <tr class="pass_area">
+                       	<td class="detail">비밀번호</td>
+                       	<td><input type="password" id="password" name="password"></td>
+                   </tr>
+				   </table>
+				   <input type="submit" id="submit" value="저장" class="btn">
+				</form>   
+			</div>
 		   	
-			<div class="review_area">
-            <form action="" method="get" enctype="multipart/form-data">
-				<div class="review_write">
-					<p onclick="openPopup()">리뷰작성하기</p>
-				</div>
-                <ul class="area_card_item" th:each="r : ${reviewList}">
-                    <li class="" th:text = "${r.contents}"></li>  
-					<div class="place_date">
-						<li class="view_place">
-							<span>장소 : </span>
-								<th:block th:object="${r.tptp}">
-                        		<span th:text="*{place}"></span>
-					      	</th:block>
-                    	</li> 
-						<li class="view_date">
-                        	<span class=""> 작성일 : </span>
-                        	<span th:text="${r.writeDate}"></span>    
-                    	</li>
-					</div>   	
-				</ul>
-
-            </form>
-            </div>
+			
         </div>
-    </div>
     </section>
 	</main>
 </th:block>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script th:inline="javascript">
 	
-    <p onclick="openPopup()">리뷰보기</p>
-    function openPopup() {
-            var popup = window.open("reviewPopup.html", "popup",
-                                    "width=700px, height=1100px, resizable=no, scrollbars=yes");
-        }
 </script>
 </html>
